.provarCaches/00D4P000000xR5ZUAU/objects/Flosum__Comment_Pull_Request__c.object
<CustomObject>
    <description>Comments for line level in Pull Request</description>
    <fields>
        <fullName>Flosum__Component_History_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Component History</label>
        <referenceTo>Flosum__Component_History__c</referenceTo>
        <relationshipLabel>Comments_Pull_Request</relationshipLabel>
        <relationshipName>Comments_Pull_Request</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Flosum__Created_On__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created_On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Flosum__File_Name__c</fullName>
        <label>File Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flosum__Line_Number__c</fullName>
        <label>Line Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Flosum__Pull_Request_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pull Request</label>
        <referenceTo>Flosum__Pull_Request__c</referenceTo>
        <relationshipLabel>Comments_Pull_Request</relationshipLabel>
        <relationshipName>Comments_Pull_Request</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Flosum__Reply_Comment__c</fullName>
        <label>Reply Comment</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flosum__Text__c</fullName>
        <label>Text</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Flosum__User_Name__c</fullName>
        <formula>CreatedBy.FirstName +&apos; &apos;+ CreatedBy.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Name</label>
        <type>Text</type>
    </fields>
    <label>Comment_Pull_Request</label>
    <nameField>
        <displayFormat>CPR-{0000}</displayFormat>
        <label>Comment_Pull_Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Comments_Pull_Request</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>